# clang-refactor

./: CMakeLists.txt  README.md
CollapsIfStatement/: CollapseIfStatement.cpp  CollapseIfStatement.h  CollapseIfStatementActions.cpp
Core/: CMakeLists.txt  IncludeDirectives.cpp  IncludeExcludeInfo.cpp  IncludeExcludeInfo.h  MatcherUtils.hpp  ReplacementHandling.cpp  Transform.cpp  Transform.h  Transforms.cpp  Transforms.h  Utility.h
ExtractMethod/: ExtractMethod.cpp  ExtractMethodActions.cpp
ForLoopStartFromZero/: ForLoopStartFromZero.cpp  ForLoopStartFromZero.h  ForLoopStartFromZeroActions.cpp  ForLoopStartFromZeroMatchers.cpp  ForLoopStartFromZeroMatchers.h
FuseToSimdVector/: FuseToSimdVectorActions.cpp
PullTemporaries/: PullTemporariesActions.cpp  PullTemporariesMatchers.cpp
Queries/QueryMangledName/: QueryMangledName.cpp  QueryMangledName.h  QueryMangledNameActions.h
Queries/QueryUsages/: QueryUsages.cpp  QueryUsages.h  QueryUsagesActions.cpp  QueryUsagesActions.h  QueryUsagesMatchers.cpp  QueryUsagesMatchers.h
QueryMangledName/: QueryMangledName.cpp  QueryMangledNameActions.cpp  QueryMangledNameMatchers.cpp  QueryMangledNameMatchers.h
RemoveIdentityOperations/: RemoveIdentityOperations.cpp  RemoveIdentityOperations.h  RemoveIdentityOperationsActions.cpp  RemoveIdentityOperationsMatchers.cpp
RemoveRedudantConditional/: RemoveRedudantConditionalMatchers.cpp
RenameVariable/: RenameVariable.cpp  RenameVariableActions.cpp  RenameVariableActions.h  RenameVariableMatchers.cpp  RenameVariableMatchers.h
RepairBrokenNullCheck/: RepairBrokenNullCheck.cpp  RepairBrokenNullCheck.h  RepairBrokenNullCheckMatchers.h
TransformationTemplate/: .ycm_extra_conf.py  TransformationTemplate.cpp  TransformationTemplate.h  TransformationTemplateActions.cpp  TransformationTemplateActions.h  TransformationTemplateMatchers.cpp  TransformationTemplateMatchers.h  specialize.sh
Transformations/CollapsIfStatement/: CollapseIfStatement.cpp  CollapseIfStatement.h  CollapseIfStatementActions.h  CollapseIfStatementMatchers.cpp  CollapseIfStatementMatchers.h
Transformations/ExtractMethod/: ExtractMethod.cpp  ExtractMethod.h  ExtractMethodActions.h  ExtractMethodMatchers.cpp  ExtractMethodMatchers.h
Transformations/ForLoopStartFromZero/: ForLoopStartFromZeroActions.cpp  ForLoopStartFromZeroActions.h  ForLoopStartFromZeroMatchers.cpp  ForLoopStartFromZeroMatchers.h
Transformations/FuseToSimdVector/: FuseToSimdVector.cpp  FuseToSimdVector.h  FuseToSimdVectorActions.h  FuseToSimdVectorMatchers.cpp  FuseToSimdVectorMatchers.h
Transformations/MoveToFirstUsage/: MoveToFirstUsage.cpp  MoveToFirstUsage.h  MoveToFirstUsageActions.cpp  MoveToFirstUsageActions.h  MoveToFirstUsageMatchers.cpp  MoveToFirstUsageMatchers.h
Transformations/NestedIndexRenamer/: NestedIndexRenamer.cpp  NestedIndexRenamer.h  NestedIndexRenamerActions.cpp  NestedIndexRenamerActions.h  NestedIndexRenamerMatchers.cpp  NestedIndexRenamerMatchers.h
Transformations/PullTemporaries/: PullTemporaries.cpp  PullTemporaries.h  PullTemporariesActions.h  PullTemporariesMatchers.h
Transformations/RemoveIdentityOperations/: RemoveIdentityOperations.cpp  RemoveIdentityOperations.h  RemoveIdentityOperationsActions.h  RemoveIdentityOperationsMatchers.h
Transformations/RemoveRedudantConditional/: RedundantContionalOperatorRule.hpp  RemoveRedudantConditional.cpp  RemoveRedudantConditional.h  RemoveRedudantConditionalActions.cpp  RemoveRedudantConditionalActions.h  RemoveRedudantConditionalMatchers.h
Transformations/Rename/: Rename.cpp  Rename.h  RenameActions.cpp  RenameActions.h  RenameMatchers.cpp  RenameMatchers.h
Transformations/RenameVariable/: RenameVariable.h  RenameVariableActions.cpp  RenameVariableMatchers.h
Transformations/RepairBrokenNullCheck/: AbstractNullCheckRule.h  RepairBrokenNullCheck.h  RepairBrokenNullCheckActions.cpp  (+2 more)
UnInvertLogic/: UnInvertLogic.h  UnInvertLogicMatchers.cpp
UnglobalMethod/: UnglobalMethod.cpp  UnglobalMethodActions.cpp  UnglobalMethodActions.h  UnglobalMethodMatchers.cpp
UseAlgorithms/: UseAlgorithms.cpp  UseAlgorithms.h  UseAlgorithmsActions.cpp  UseAlgorithmsMatchers.cpp  UseAlgorithmsMatchers.h
UseCompoundAssignOperator/: UseCompoundAssignOperator.cpp  UseCompoundAssignOperator.h  UseCompoundAssignOperatorActions.cpp  UseCompoundAssignOperatorActions.h  UseCompoundAssignOperatorMatchers.cpp  UseCompoundAssignOperatorMatchers.h
UseConst/: UseConst.cpp  UseConstActions.cpp
UseEmplace/: UseEmplace.h  UseEmplaceActions.cpp  UseEmplaceMatchers.cpp  UseEmplaceMatchers.h
UseEmpty/: UseEmpty.cpp
UseExpMinusOne/: UseExpMinusOne.cpp  UseExpMinusOne.h  UseExpMinusOneMatchers.cpp
UseFullyQualifiedTypes/: UseFullyQualifiedTypesActions.cpp  UseFullyQualifiedTypesMatchers.h
UseFusedMultiplyAdd/: UseFusedMultiplyAdd.cpp  UseFusedMultiplyAdd.h  UseFusedMultiplyAddMatchers.cpp
UseHypot/: UseHypot.cpp  UseHypot.h  UseHypotMatchers.h
UseLocalIteratorInForLoop/: UseLocalIteratorInForLoop.cpp  UseLocalIteratorInForLoop.h  UseLocalIteratorInForLoopActions.cpp  UseLocalIteratorInForLoopActions.h  UseLocalIteratorInForLoopMatchers.cpp  UseLocalIteratorInForLoopMatchers.h
UseMathConstants/: UseMathConstants.cpp  UseMathConstants.h  UseMathConstantsActions.cpp  UseMathConstantsActions.h  UseMathConstantsMatchers.cpp  UseMathConstantsMatchers.h
UsePowerOperator/: UsePowerOperator.cpp  UsePowerOperator.h  UsePowerOperatorActions.cpp  UsePowerOperatorMatchers.cpp  UsePowerOperatorMatchers.h
UseRAII/: UseRAII.cpp  UseRAIIActions.cpp  UseRAIIMatchers.cpp  UseRAIIMatchers.h
UseRound/: UseRound.cpp  UseRound.h  UseRoundMatchers.cpp
UseStdArray/: UseStdArray.h  UseStdArrayActions.cpp  UseStdArrayActions.h  UseStdArrayMatchers.cpp
UseSwap/: UseSwap.h  UseSwapActions.cpp  UseSwapMatchers.cpp
UseUnaryOperator/: UseUnaryOperator.cpp  UseUnaryOperator.h  UseUnaryOperatorActions.h
UseVector/: UseVectorActions.cpp  UseVectorMatchers.cpp
test/: CMakeLists.txt
test/UseCompoundOperators/: CMakeLists.txt  UseCompoundAssignOperator.cpp
tool/: CMakeLists.txt  ClangModernize.cpp
(+93 files in other folders)
